# Project_I

./: CMakeLists.txt  Date.cpp  Date.hpp  Student.cpp  Student.hpp  main.cpp  nb_classifier.cpp
datasets/test/: master.txt  new_mail_1.txt
datasets/train/: mail_2.txt  master.txt
date/: Date.hpp
nb_classifier/classifier_training/: classifier_functions.cpp  classifier_functions.hpp
nb_classifier/feature_extraction/: classifier_state.hpp  mail_tokenizer.cpp  mail_tokenizer.hpp
pill/: Pill.cpp  Pill.hpp
student/: Student.hpp
tasks/: task_solution.cpp  task_solution.hpp
